--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -2,14 +2,22 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>node js</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css
+"
+        />
+        <link rel="stylesheet" href="/css/app.css" />
     </head>
     <body>
         <div class="app">
-            {{> header}}
+            {{header}}
             <div class="container">{{{body}}}</div>
-            {{> footer}}
-
+            {{footer}}
         </div>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        ></script>
     </body>
 </html>
