--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">F8 education</a>
+        <a class="navbar-brand" href="/">F8 education</a>
         <button
             class="navbar-toggler"
             type="button"
